package plugins

import (
	"context"
	"time"

	"google.golang.org/grpc"
	"github.com/Caia-Tech/afdp/services/policy-engine/internal/logging"
	"github.com/Caia-Tech/afdp/services/policy-engine/pkg/framework"
)

// GRPCEvaluatorPlugin wraps a gRPC connection as a PolicyEvaluator
type GRPCEvaluatorPlugin struct {
	conn   *grpc.ClientConn
	config framework.PluginConfig
	logger *logging.Logger
	// In a real implementation, would have a gRPC client here
}

// NewGRPCEvaluatorPlugin creates a new gRPC evaluator plugin
func NewGRPCEvaluatorPlugin(conn *grpc.ClientConn, config framework.PluginConfig, logger *logging.Logger) (framework.Plugin, error) {
	return &GRPCEvaluatorPlugin{
		conn:   conn,
		config: config,
		logger: logger,
	}, nil
}

func (g *GRPCEvaluatorPlugin) Name() string                               { return g.config.Name }
func (g *GRPCEvaluatorPlugin) Version() string                            { return g.config.Source.Version }
func (g *GRPCEvaluatorPlugin) Type() framework.PluginType                 { return framework.PluginTypeEvaluator }
func (g *GRPCEvaluatorPlugin) Metadata() framework.PluginMetadata         { return framework.PluginMetadata{} }
func (g *GRPCEvaluatorPlugin) Initialize(ctx context.Context, config framework.PluginConfig) error { return nil }
func (g *GRPCEvaluatorPlugin) Start(ctx context.Context) error            { return nil }
func (g *GRPCEvaluatorPlugin) Stop(ctx context.Context) error             { return nil }
func (g *GRPCEvaluatorPlugin) Reload(ctx context.Context, config framework.PluginConfig) error { return nil }
func (g *GRPCEvaluatorPlugin) Health() framework.HealthStatus {
	return framework.HealthStatus{Status: "healthy", Message: "gRPC connection active"}
}
func (g *GRPCEvaluatorPlugin) Metrics() framework.PluginMetrics { return framework.PluginMetrics{} }
func (g *GRPCEvaluatorPlugin) ValidateConfig(config framework.PluginConfig) framework.ValidationResult {
	return framework.ValidationResult{Valid: true}
}

// PolicyEvaluator implementation
func (g *GRPCEvaluatorPlugin) CompilePolicy(ctx context.Context, req *framework.CompilePolicyRequest) (*framework.CompilePolicyResponse, error) {
	// Would call gRPC service
	return &framework.CompilePolicyResponse{Success: true}, nil
}

func (g *GRPCEvaluatorPlugin) ValidatePolicy(ctx context.Context, req *framework.ValidatePolicyRequest) (*framework.ValidatePolicyResponse, error) {
	// Would call gRPC service
	return &framework.ValidatePolicyResponse{Valid: true}, nil
}

func (g *GRPCEvaluatorPlugin) Evaluate(ctx context.Context, req *framework.EvaluationRequest) (*framework.EvaluationResponse, error) {
	// Would call gRPC service
	return &framework.EvaluationResponse{
		Decision: framework.PolicyDecision{Result: "allow"},
	}, nil
}

func (g *GRPCEvaluatorPlugin) EvaluateBatch(ctx context.Context, req *framework.BatchEvaluationRequest) (*framework.BatchEvaluationResponse, error) {
	// Would call gRPC service
	return &framework.BatchEvaluationResponse{}, nil
}

func (g *GRPCEvaluatorPlugin) LoadPolicy(ctx context.Context, req *framework.LoadPolicyRequest) (*framework.LoadPolicyResponse, error) {
	// Would call gRPC service
	return &framework.LoadPolicyResponse{Success: true}, nil
}

func (g *GRPCEvaluatorPlugin) UnloadPolicy(ctx context.Context, req *framework.UnloadPolicyRequest) (*framework.UnloadPolicyResponse, error) {
	// Would call gRPC service
	return &framework.UnloadPolicyResponse{Success: true}, nil
}

func (g *GRPCEvaluatorPlugin) ListPolicies(ctx context.Context, req *framework.ListPoliciesRequest) (*framework.ListPoliciesResponse, error) {
	// Would call gRPC service
	return &framework.ListPoliciesResponse{}, nil
}

func (g *GRPCEvaluatorPlugin) SupportedLanguages() []string {
	return []string{"rego", "javascript", "python"}
}

func (g *GRPCEvaluatorPlugin) SupportedFeatures() []string {
	return []string{"remote_evaluation"}
}

// GRPCDataSourcePlugin wraps a gRPC connection as a DataSource
type GRPCDataSourcePlugin struct {
	conn   *grpc.ClientConn
	config framework.PluginConfig
	logger *logging.Logger
}

// NewGRPCDataSourcePlugin creates a new gRPC data source plugin
func NewGRPCDataSourcePlugin(conn *grpc.ClientConn, config framework.PluginConfig, logger *logging.Logger) (framework.Plugin, error) {
	return &GRPCDataSourcePlugin{
		conn:   conn,
		config: config,
		logger: logger,
	}, nil
}

func (g *GRPCDataSourcePlugin) Name() string                               { return g.config.Name }
func (g *GRPCDataSourcePlugin) Version() string                            { return g.config.Source.Version }
func (g *GRPCDataSourcePlugin) Type() framework.PluginType                 { return framework.PluginTypeDataSource }
func (g *GRPCDataSourcePlugin) Metadata() framework.PluginMetadata         { return framework.PluginMetadata{} }
func (g *GRPCDataSourcePlugin) Initialize(ctx context.Context, config framework.PluginConfig) error { return nil }
func (g *GRPCDataSourcePlugin) Start(ctx context.Context) error            { return nil }
func (g *GRPCDataSourcePlugin) Stop(ctx context.Context) error             { return nil }
func (g *GRPCDataSourcePlugin) Reload(ctx context.Context, config framework.PluginConfig) error { return nil }
func (g *GRPCDataSourcePlugin) Health() framework.HealthStatus {
	return framework.HealthStatus{Status: "healthy", Message: "gRPC connection active"}
}
func (g *GRPCDataSourcePlugin) Metrics() framework.PluginMetrics { return framework.PluginMetrics{} }
func (g *GRPCDataSourcePlugin) ValidateConfig(config framework.PluginConfig) framework.ValidationResult {
	return framework.ValidationResult{Valid: true}
}

// DataSource implementation
func (g *GRPCDataSourcePlugin) Fetch(ctx context.Context, req *framework.FetchRequest) (*framework.FetchResponse, error) {
	// Would call gRPC service
	return &framework.FetchResponse{Data: make(map[string]interface{})}, nil
}

func (g *GRPCDataSourcePlugin) Stream(ctx context.Context, req *framework.StreamRequest) (framework.DataStream, error) {
	// Would call gRPC service
	return nil, nil
}

func (g *GRPCDataSourcePlugin) Query(ctx context.Context, req *framework.QueryRequest) (*framework.QueryResponse, error) {
	// Would call gRPC service
	return &framework.QueryResponse{}, nil
}

func (g *GRPCDataSourcePlugin) Schema(ctx context.Context) (*framework.DataSchema, error) {
	// Would call gRPC service
	return &framework.DataSchema{}, nil
}

func (g *GRPCDataSourcePlugin) SupportedQueryTypes() []framework.QueryType {
	return []framework.QueryType{framework.QueryTypeSQL}
}

func (g *GRPCDataSourcePlugin) SupportedDataTypes() []framework.DataType {
	return []framework.DataType{framework.DataTypeStructured}
}

func (g *GRPCDataSourcePlugin) Connect(ctx context.Context) error {
	return nil
}

func (g *GRPCDataSourcePlugin) Disconnect(ctx context.Context) error {
	return nil
}

func (g *GRPCDataSourcePlugin) TestConnection(ctx context.Context) (*framework.ConnectionTestResult, error) {
	return &framework.ConnectionTestResult{
		Success: true,
		Message: "gRPC connection active",
		Latency: 10 * time.Millisecond,
	}, nil
}

// GRPCWorkflowPlugin wraps a gRPC connection as a Workflow
type GRPCWorkflowPlugin struct {
	conn   *grpc.ClientConn
	config framework.PluginConfig
	logger *logging.Logger
}

// NewGRPCWorkflowPlugin creates a new gRPC workflow plugin
func NewGRPCWorkflowPlugin(conn *grpc.ClientConn, config framework.PluginConfig, logger *logging.Logger) (framework.Plugin, error) {
	return &GRPCWorkflowPlugin{
		conn:   conn,
		config: config,
		logger: logger,
	}, nil
}

func (g *GRPCWorkflowPlugin) Name() string                               { return g.config.Name }
func (g *GRPCWorkflowPlugin) Version() string                            { return g.config.Source.Version }
func (g *GRPCWorkflowPlugin) Type() framework.PluginType                 { return framework.PluginTypeWorkflow }
func (g *GRPCWorkflowPlugin) Metadata() framework.PluginMetadata         { return framework.PluginMetadata{} }
func (g *GRPCWorkflowPlugin) Initialize(ctx context.Context, config framework.PluginConfig) error { return nil }
func (g *GRPCWorkflowPlugin) Start(ctx context.Context) error            { return nil }
func (g *GRPCWorkflowPlugin) Stop(ctx context.Context) error             { return nil }
func (g *GRPCWorkflowPlugin) Reload(ctx context.Context, config framework.PluginConfig) error { return nil }
func (g *GRPCWorkflowPlugin) Health() framework.HealthStatus {
	return framework.HealthStatus{Status: "healthy", Message: "gRPC connection active"}
}
func (g *GRPCWorkflowPlugin) Metrics() framework.PluginMetrics { return framework.PluginMetrics{} }
func (g *GRPCWorkflowPlugin) ValidateConfig(config framework.PluginConfig) framework.ValidationResult {
	return framework.ValidationResult{Valid: true}
}

// Workflow implementation
func (g *GRPCWorkflowPlugin) StartWorkflow(ctx context.Context, req *framework.StartWorkflowRequest) (*framework.StartWorkflowResponse, error) {
	// Would call gRPC service
	return &framework.StartWorkflowResponse{
		ExecutionID: "exec-123",
		Status:      "running",
	}, nil
}

func (g *GRPCWorkflowPlugin) GetWorkflowStatus(ctx context.Context, req *framework.GetWorkflowStatusRequest) (*framework.GetWorkflowStatusResponse, error) {
	// Would call gRPC service
	return &framework.GetWorkflowStatusResponse{
		ExecutionID: req.ExecutionID,
		Status:      "running",
	}, nil
}

func (g *GRPCWorkflowPlugin) CancelWorkflow(ctx context.Context, req *framework.CancelWorkflowRequest) (*framework.CancelWorkflowResponse, error) {
	// Would call gRPC service
	return &framework.CancelWorkflowResponse{Success: true}, nil
}

func (g *GRPCWorkflowPlugin) HandleEvent(ctx context.Context, req *framework.HandleEventRequest) (*framework.HandleEventResponse, error) {
	// Would call gRPC service
	return &framework.HandleEventResponse{Handled: true}, nil
}

func (g *GRPCWorkflowPlugin) SubscribeToEvents(ctx context.Context, req *framework.SubscribeRequest) (framework.EventStream, error) {
	// Would call gRPC service
	return nil, nil
}

func (g *GRPCWorkflowPlugin) ListActiveWorkflows(ctx context.Context, req *framework.ListActiveWorkflowsRequest) (*framework.ListActiveWorkflowsResponse, error) {
	// Would call gRPC service
	return &framework.ListActiveWorkflowsResponse{}, nil
}

func (g *GRPCWorkflowPlugin) GetWorkflowHistory(ctx context.Context, req *framework.GetWorkflowHistoryRequest) (*framework.GetWorkflowHistoryResponse, error) {
	// Would call gRPC service
	return &framework.GetWorkflowHistoryResponse{}, nil
}

func (g *GRPCWorkflowPlugin) LoadWorkflowDefinition(ctx context.Context, req *framework.LoadWorkflowDefinitionRequest) (*framework.LoadWorkflowDefinitionResponse, error) {
	// Would call gRPC service
	return &framework.LoadWorkflowDefinitionResponse{Success: true}, nil
}

func (g *GRPCWorkflowPlugin) ValidateWorkflowDefinition(ctx context.Context, req *framework.ValidateWorkflowDefinitionRequest) (*framework.ValidateWorkflowDefinitionResponse, error) {
	// Would call gRPC service
	return &framework.ValidateWorkflowDefinitionResponse{Valid: true}, nil
}